crates/ohno_macros/src/derive_error/generate/snapshots/ohno_macros__derive_error__generate__tests__a_tuple_struct_generates_positional_items.snap
---
source: crates/ohno_macros/src/derive_error/generate/mod.rs
expression: "rendered(&Builder::tuple(3, 2).build())"
---
#[automatically_derived]
impl ::core::fmt::Display for MyError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.2.format_error(f, "MyError", ::core::option::Option::None)
    }
}
#[automatically_derived]
impl ::std::error::Error for MyError {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.2.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for MyError {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.2, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for MyError {
    fn message(&self) -> ::std::string::String {
        self.2.format_message("MyError", ::core::option::Option::None)
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.2.backtrace()
    }
}
impl ::core::fmt::Debug for MyError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_tuple("MyError").field(&self.0).field(&self.1).field(&self.2).finish()
    }
}
#[automatically_derived]
impl MyError {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new(
        param_0: impl ::core::convert::Into<String>,
        param_1: impl ::core::convert::Into<String>,
    ) -> Self {
        Self(param_0.into(), param_1.into(), ::ohno::OhnoCore::default())
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        param_0: impl ::core::convert::Into<String>,
        param_1: impl ::core::convert::Into<String>,
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self(param_0.into(), param_1.into(), ::ohno::OhnoCore::from(error))
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for MyError {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}
